[package]
name = "druid-datagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.3"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.196"
serde_json = "1.0.113"
clap = { version = "4.5.0", features = ["derive"] }
